Version 1.0 (minus small non functional stuff)